# hs-matrix

./: .gitignore  README.adoc  flake.nix  hs-matrix.cabal  hs-matrix.nix
app/: Main.hs
